# Interpolation

./: CMakeLists.txt  Extrapolation.h  Splines.h  ceramic2.txt  ceramic_Pc2.txt.save  main.cpp  sample.txt
include/: Extrapolation.h  Splines.h
src/: CMakeLists.txt  Extrapolation.cpp  Splines.cpp
